--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,8 @@
             "console": "integratedTerminal",
             "cwd": "${fileDirname}",
             "purpose": ["debug-in-terminal"],
-            "pythonPath": "/home/ps/miniconda3/envs/hd/bin/python"
+            // "pythonPath": "/home/ps/miniconda3/envs/hd/bin/python"
+            "pythonPath": "C:\\ProgramData\\Miniconda3\\envs\\hdbisai\\python.exe"
         },
         {
             "name": "Python: Debug demo.py",
@@ -17,7 +18,7 @@
             "request": "launch",
             "program": "${workspaceFolder}/demo.py",
             "console": "integratedTerminal",
-            "pythonPath": "D:\\projects\\hdbisai\\python.exe"
+            "pythonPath": "C:\\ProgramData\\Miniconda3\\envs\\hdbisai\\python.exe"
         }
     ]
 }
